--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.5.0/remixicon.css">
    
    <!-- Swiper Slider CSS -->
-   <link rel="stylesheet" href="swiper.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.css">
 </head>
 <body>
 
@@ -171,6 +171,107 @@
         </div>
       </div>
     </div>
+    <!--  SKILLS -->
+      <div class="skill section">
+        <div class="skills_content">
+          <div class="Headings">
+          <span>OUR SKILLS</span>
+          <h1>Getting A Greener Future Safe <span>Environment</span></h1>
+          </div>
+          <p>Competently cultivate worlwide e-trailers through principle-centred value professionally engineer
+            high-payoff deliverables without exceptional processes. Rapidiously network cost effective vortals</p>
+            <div class="skills_infos">
+              <div class="skills_info">
+                  <h1>Recycling</h1>
+                  <div class="proges"></div>
+              </div>
+              <div class="skills_info">
+                  <h1>Ocean Cleaning</h1>
+                  <div class="proges"></div>
+              </div>
+            </div>
+        </div>
+        <div class="skills_img">
+          <img src="images/skill-thumb.png" alt="">
+        </div>
+      </div>
+      <!-- COUNTER -->
+      <div class="counter section">
+        <!-- box 1 -->
+        <div class="count_box">
+          <img src="images/counter-icon.png" alt="">
+          <h1>100+</h1>
+          <h2>Team Member</h2>
+        </div>
+       <!-- box 2 -->
+        <div class="count_box">
+          <img src="images/counter-icon2.png" alt="">
+          <h1>960+</h1>
+          <h2>Complete Works</h2>
+        </div>
+       <!-- box 3 -->
+        <div class="count_box">
+          <img src="images/counter-icon3.png" alt="">
+          <h1>35+</h1>
+          <h2>Awards Wininng</h2>
+        </div>
+       <!-- box 4 -->
+        <div class="count_box">
+          <img src="images/counter-icon4.png" alt="">
+          <h1>4.7+</h1>
+          <h2>Avg. Ratings</h2>
+        </div>
+      </div
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   <!-- Swiper Slider JS  -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.js"></script>
